--- a/aboutme.css
+++ b/aboutme.css
@@ -39,6 +39,7 @@ h1 {
 	padding: 5px;
 	margin: 5px;
 	padding-bottom: 10px;
+	overflow: auto;
 }
 img {
 	float: left;
@@ -46,7 +47,6 @@ img {
 	border-bottom-right-radius: 10px;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
-	margin-bottom: 10px;
 }
 #notwelp {
 	width: 500px;
